Tue Nov 30 12:50:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/DDSEntity/Receiver/Writer_Receiver.mpc:
        * connectors/dds4ccm/tests/DDSEntity/Receiver/Writer_Receiver_exec.h:
        * connectors/dds4ccm/tests/DDSEntity/Receiver/Writer_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/DDSEntity/Sender/Writer_Sender_exec.h:
        * connectors/dds4ccm/tests/DDSEntity/Sender/Writer_Sender_exec.cpp:
          Rewritten, using the generated executor files.

Tue Nov 30 09:55:39 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Deployment/descriptors/Plan.cdp:
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Deployment/scripts/run_test.pl:
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Receiver_comp/src/Hello_Receiver_comp_exec.h:
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Receiver_comp/src/Hello_Receiver_comp_exec.cpp:
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Sender_comp/src/Hello_Sender_comp_exec.cpp:
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Sender_comp/src/Hello_Sender_comp_exec.h:
        Implemente get_methods and generated exec's .

Tue Nov 30 09:56:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager.cpp:
          Removed unnecessary checks for nil pointers.

        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Receiver/ReadGet_Test_Receiver.mpc:
        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Receiver/ReadGet_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Sender/ReadGet_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Sender/ReadGet_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver.mpc: