@@ -14,8 +14,8 @@ module MultipleTemp
 {
   component Receiver
   {
-    port MultipleTempConnector::DDS_Listen info_one_out;
-    port MultipleTempConnector::DDS_Listen info_two_out;
+	  port MultipleTempConnector::T_Typed::DDS_Listen info_one_out;
+	  port MultipleTempConnector::Y_Typed::DDS_Listen info_two_out;
   };
 };
 
